Fixed words not wrapping when exceeding the max width (#3767)
* fixed issue for exceeding the max width


* added review comment changes

--- a/components/automate-ui/src/app/page-components/services-sidebar/services-sidebar.component.scss
+++ b/components/automate-ui/src/app/page-components/services-sidebar/services-sidebar.component.scss
@@ -74,35 +74,31 @@ chef-alert {
 
   .fqdn-line {
     display: flex;
-    align-items: center;
     margin-bottom: 8px;
     font-size: 14px;
   }
 
   .supervisor-line {
     display: flex;
-    align-items: center;
     margin-bottom: 4px;
     font-size: 12px;
 
-    b {
+    strong {
       margin-right: 4px;
     }
   }
 
   .site-line {
     display: flex;
-    align-items: center;
     font-size: 12px;
 
-    b {
+    strong {
       margin-right: 4px;
     }
   }
 
   .release-line {
     display: flex;
-    align-items: center;
     margin-bottom: 8px;
     font-size: 14px;
   }
@@ -312,3 +308,21 @@ chef-alert {
   padding-right: 35px;
 }
 
+.fqdn-data {
+  margin-bottom: 0px;
+  word-break: break-all;
+}
+
+.site-data,
+.supervisor-data {
+  margin-bottom: 0px;
+  font-size: 12px;
+  padding-top: 2px;
+  word-break: break-all;
+}
+
+.release-data {
+  margin-bottom: 0px;
+  font-size: 14px;
+  word-break: break-all;
+}
