--- a/components/automate-ui/src/app/pages/service-groups/service-groups.component.scss
+++ b/components/automate-ui/src/app/pages/service-groups/service-groups.component.scss
@@ -408,3 +408,7 @@ chef-radial-chart {
     width: 14px;
   }
 }
+
+chef-td {
+  word-break: break-all;
+}
